# hedge-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MasterPlan.md  README.md  docker-compose.yml  hedge_engine_plan.md  mypy.ini  pyproject.toml  repo_plans.md  research_evidence_matrix.md  research_integration_notes.md  sentiment_pipeline_plan.md
.github/workflows/: canary.yaml  ci.yaml
.hypothesis/constants/: 004a0f93f15a40f8  17d039b2fad0e0cd  1bdaaa9a6dfe7369  1f101fdf9b35f550  6f5b07203b5bdca2  aecf995bf738bbfb  b03ea69e76fd6524  d60478274b60f4da  ebde2c8b75c0225f  ef07bfc79151d122  f5eb5bf09b746ec5  fac1191b5e7e76df
configs/: curve_knots.yaml
examples/: high_risk_volatile.json  low_risk_btc.json  moderate_risk.json  run_examples.py  short_squeeze.json
hedge_engine/: api.py  assessor.py  backtest.py  calibrate.py  circuit_breaker.py  cli.py  config.py  db.py  decision_logger.py  distributional.py  main.py  models.py  redis_bridge.py  signals.py  sizer.py  validators.py
notebooks/: hedge_engine_colab.ipynb  hedge_engine_demo.ipynb  hedge_engine_demo.py  signal_engine_demo.ipynb
tests/: conftest.py  test_api.py  test_assessor.py  test_circuit_breaker.py  test_decision_logger.py  test_health.py  test_hedge.py  test_metrics.py  test_perf.py  test_reload.py  test_sizer.py  test_sizer_prop.py
