[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge-engine"
version = "0.1.0"
description = "Low-latency hedge sizing service"
authors = [
    { name = "Hedge-Engine Dev Team", email = "dev@example.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

# Core runtime dependencies
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",  # For sentiment-pipeline integration (Redis pub/sub)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
# Developer / CI toolchain

dev = [
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
] 