[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge-engine"
version = "0.2.0"
description = "Real-time inventory risk assessment for market makers"
authors = [
    { name = "Greg Butcher", email = "gregbutcher307@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

# Core runtime dependencies
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
# Developer / CI toolchain
dev = [
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

# Calibration tools
calibrate = [
    "optuna>=3.5.0",
]

# Full installation with all optional deps
all = [
    "optuna>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hedge_engine*"]

[tool.ruff]
exclude = ["notebooks/"]

[tool.black]
extend-exclude = "notebooks/" 